fixed bug with annotating pop-up being overflowed

--- a/css/global.css
+++ b/css/global.css
@@ -172,7 +172,7 @@ table.views-table tr td .attachment_text_full_container a:link, table.views-tabl
 
 /* Speaker paper overflow */
 .view-speaking-paper {
-  overflow-y: auto;
+/*   overflow-y: auto; */
 }
 
 /*---------------------------- Small Fixes End ----------------------------*/
